[gd_scene load_steps=4 format=3 uid="uid://g5bajgx3pqg7"]

[ext_resource type="Script" path="res://script/intro.gd" id="1_46dxr"]
[ext_resource type="VideoStream" path="res://Movies/Startbildschirm.ogv" id="2_5gyyw"]
[ext_resource type="AudioStream" uid="uid://bi118c73ve1lk" path="res://Sounds/0114.MP3" id="3_x2s66"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46dxr")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_5gyyw")
autoplay = true
expand = true
loop = true

[node name="MarginContainer" type="MarginContainer" parent="."]
visibility_layer = 0
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 141.0
offset_top = 309.0
offset_right = 149.0
offset_bottom = 353.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.183599, 4.61644)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x2s66")
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
